Closed Bug 191548 Opened 23 years ago Closed 23 years ago

EmbedContentListener needs to support weak references

Categories

(Core Graveyard :: Embedding: GTK Widget, defect)

x86
Linux
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: bryner, Assigned: bryner)

Details

Attachments

(1 file)

There's an assertion on startup of TestGtkEmbed about the content listener not supporting weak references. I suspect something isn't getting hooked up correctly because we fail to get a weak reference.
Attached patch patchSplinter Review
Comment on attachment 113285 [details] [diff] [review] patch r=pavlov
Attachment #113285 - Flags: review+
Attachment #113285 - Flags: superreview?(blizzard)
Comment on attachment 113285 [details] [diff] [review] patch sr=blizzard
Attachment #113285 - Flags: superreview?(blizzard) → superreview+
Attachment #113285 - Flags: approval1.3b?
Yeah, I think that's what the assertion is from. So I guess it's not actually causing a problem, but I'd prefer not to get the assertion.
Attachment #113285 - Flags: approval1.3b? → approval1.3b+
fix checked in.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: