support weak references in TestGtkEmbed's content listener (bug 191548). r=pavlov, sr=blizzard, a=asa.